
* LUCENE-10503: Potential speedup for pure disjunctions whose clauses produce
  scores that are very close to each other. (Adrien Grand)

* LUCENE-10315: Use SIMD instructions to decode BKD doc IDs. (Guo Feng, Adrien Grand, Ignacio Vera)

* LUCENE-8836: Speed up calls to TermsEnum#lookupOrd on doc values terms enums
  and sequences of increasing ords. (Bruno Roustant, Adrien Grand)

* LUCENE-10411: Add nearest neighbors vectors support to ExitableDirectoryReader. 
  (Zach Chen, Adrien Grand, Julie Tibshirani, Tomoko Uchida)

* LUCENE-10542: FieldSource exists implementations can avoid value retrieval (Kevin Risden)

* LUCENE-10534: MinFloatFunction / MaxFloatFunction exists check can be slow (Kevin Risden)

* LUCENE-10496: Queries sorted by field now better handle the degenerate case
  when the search order and the index order are in opposite directions.
  (Jianping Weng)

* LUCENE-10502: Use IndexedDISI to store docIds and DirectMonotonicWriter/Reader to handle
  ordToDoc in HNSW vectors (Lu Xugang)

Bug Fixes
---------------------
* LUCENE-10477: Highlighter: WeightedSpanTermExtractor.extractWeightedSpanTerms to Query#rewrite
  multiple times if necessary. (Christine Poerschke, Adrien Grand)

* LUCENE-10491: A correctness bug in the way scores are provided within TaxonomyFacetSumValueSource
  was fixed. (Michael McCandless, Greg Miller)

* LUCENE-10466: Ensure IndexSortSortedNumericDocValuesRangeQuery handles sort field
  types besides LONG (Andriy Redko)

* LUCENE-10292: Suggest: Fix AnalyzingInfixSuggester / BlendedInfixSuggester to correctly return
  existing lookup() results during concurrent build().  Fix other FST based suggesters so that
  getCount() returned results consistent with lookup() during concurrent build().  (hossman)

* LUCENE-10508: Fixes some edge cases where GeoArea were built in a way that vertical planes
  could not evaluate their sign, either because the planes where the same or the center between those